# BinWalker

./: .gitignore  BUILD.md  BUILD_GUIDE.md  README.md  build.bat  build.ps1  create_icon.py  index.html  package-lock.json  package.json  vite.config.ts
local-binwalk/src/: binwalk.rs
local-binwalk/src/extractors/: common.rs
local-binwalk/src/signatures/: common.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_squashfs_pem_bin.rs
src-tauri/src/: commands.rs  main.rs
