[package]
name = "binwalker"
version = "1.0.0"
description = "A firmware analysis tool based on binwalk"
authors = ["BinWalker"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
binwalk = "3.1.0"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
backhand = { version = "0.19", default-features = false, features = ["xz", "gzip-zune-inflate", "lzo"] }
oxiarc-lzma = "0.3"
lzma-rs = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
