[package]
name = "binwalker"
version = "1.0.0"
description = "A firmware analysis tool based on binwalk"
authors = ["BinWalker"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
binwalk = { path = "../local-binwalk" }
tokio = { version = "1", features = ["full"] }
flate2 = "1"
backhand = { version = "0.19", default-features = false, features = ["gzip-zune-inflate", "lzo"] }
oxiarc-lzma = "0.3"
lzma-rs = "0.3"
bzip2 = "0.6"
tar = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
